Feat: task service skeleton

--- a/TasksService/TasksService.Application/TasksService.Application.csproj
+++ b/TasksService/TasksService.Application/TasksService.Application.csproj
@@ -7,4 +7,11 @@
         <RootNamespace>Application</RootNamespace>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Folder Include="Contracts\" />
+      <Folder Include="DataTransferObjects\" />
+      <Folder Include="MappingProfiles\" />
+      <Folder Include="UseCases\" />
+    </ItemGroup>
+
 </Project>
