--- a/TasksService/TasksService.Presentation/TasksService.Presentation.csproj
+++ b/TasksService/TasksService.Presentation/TasksService.Presentation.csproj
@@ -7,7 +7,15 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Controllers\" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.1">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+      <PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\TasksService.Infrastructure\TasksService.Infrastructure.csproj" />
     </ItemGroup>
 
 </Project>
