--- a/TasksService/TasksService.Presentation/appsettings.json
+++ b/TasksService/TasksService.Presentation/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "sqlConnection": "Host=localhost;Port=5432;Database=TasksDb;Username=postgres;Password=1111"
+  },
   "AllowedHosts": "*"
 }
