Feat: NotificationsService skeleton, connect MongoDb, add CreateNotificationCommandHandler.cs

--- a/NotificationsService/NotificationsService.Presentation/NotificationsService.Presentation.csproj
+++ b/NotificationsService/NotificationsService.Presentation/NotificationsService.Presentation.csproj
@@ -6,4 +6,9 @@
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\NotificationsService.Application\NotificationsService.Application.csproj" />
+      <ProjectReference Include="..\NotificationsService.Infrastructure\NotificationsService.Infrastructure.csproj" />
+    </ItemGroup>
+
 </Project>
