--- a/NotificationsService/NotificationsService.Presentation/appsettings.json
+++ b/NotificationsService/NotificationsService.Presentation/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "MongoDb": "mongodb://localhost:27017"
+  },
+  "MongoDbSettings": {
+    "DatabaseName": "NotificationsDb",
+    "CollectionName": "Notifications"
+  }, 
   "AllowedHosts": "*"
 }
