--- a/NotificationsService/NotificationsService.Infrastructure/NotificationsService.Infrastructure.csproj
+++ b/NotificationsService/NotificationsService.Infrastructure/NotificationsService.Infrastructure.csproj
@@ -6,4 +6,13 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\NotificationsService.Application\NotificationsService.Application.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.2" />
+      <PackageReference Include="MongoDB.Driver" Version="3.2.0" />
+    </ItemGroup>
+
 </Project>
