--- a/NotificationsService/NotificationsService.Application/NotificationsService.Application.csproj
+++ b/NotificationsService/NotificationsService.Application/NotificationsService.Application.csproj
@@ -12,12 +12,9 @@
 
     <ItemGroup>
       <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+      <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
       <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.2" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="UseCases\Queries\" />
     </ItemGroup>
 
 </Project>
