Feat: send email messages with Hangfire

--- a/NotificationsService/NotificationsService.Presentation/appsettings.json
+++ b/NotificationsService/NotificationsService.Presentation/appsettings.json
@@ -6,11 +6,19 @@
     }
   },
   "ConnectionStrings": {
-    "MongoDb": "mongodb://localhost:27017"
+    "MongoDb": "mongodb://localhost:27017",
+    "MongoHangfire": "mongodb://localhost:27017/HangfireDb"
   },
   "MongoDbSettings": {
     "DatabaseName": "NotificationsDb",
     "CollectionName": "Notifications"
-  }, 
+  },
+  "EmailSettings": {
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 587,
+    "SenderEmail": "eugen.savenok@gmail.com",
+    "SenderName": "TaskManager",
+    "Password": "rgsqmcmrrjaaqrhf"
+  },
   "AllowedHosts": "*"
 }
