--- a/NotificationsService/NotificationsService.Application/NotificationsService.Application.csproj
+++ b/NotificationsService/NotificationsService.Application/NotificationsService.Application.csproj
@@ -13,6 +13,9 @@
     <ItemGroup>
       <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
       <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
+      <PackageReference Include="Hangfire.AspNetCore" Version="1.8.18" />
+      <PackageReference Include="Hangfire.Core" Version="1.8.18" />
+      <PackageReference Include="MailKit" Version="4.10.0" />
       <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.2" />
     </ItemGroup>
