--- a/NotificationsService/NotificationsService.Infrastructure/NotificationsService.Infrastructure.csproj
+++ b/NotificationsService/NotificationsService.Infrastructure/NotificationsService.Infrastructure.csproj
@@ -11,6 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Hangfire.Mongo" Version="1.11.3" />
       <PackageReference Include="Microsoft.AspNetCore.Diagnostics" Version="2.3.0" />
       <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.2" />
