--- a/UsersService/UsersService.Presentation/UsersService.Presentation.csproj
+++ b/UsersService/UsersService.Presentation/UsersService.Presentation.csproj
@@ -6,4 +6,16 @@
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\UsersService.Application\UsersService.Application.csproj" />
+      <ProjectReference Include="..\UsersService.Infrastructure\UsersService.Infrastructure.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.2">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+    </ItemGroup>
+
 </Project>
