--- a/UsersService/UsersService.Presentation/appsettings.json
+++ b/UsersService/UsersService.Presentation/appsettings.json
@@ -5,8 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "JwtSettings": {
+    "validIssuer": "ThisIsAVeryVeryStrongSecretKey12345",
+    "validAudience": "https://localhost:5100",
+    "expires": 5,
+    "RefreshTokenLifeTime": 10
+  },
   "ConnectionStrings": {
     "sqlConnection": "Host=localhost;Port=5432;Database=UsersDb;Username=postgres;Password=1111"
   },
-  "AllowedHosts": "*"
+"AllowedHosts": "*"
 }
