Feat: getting userId from Claims during creating task; roles (admin and user); deleting user and getting all users (by admin role)

--- a/TasksService/TasksService.Presentation/appsettings.json
+++ b/TasksService/TasksService.Presentation/appsettings.json
@@ -8,5 +8,11 @@
   "ConnectionStrings": {
     "sqlConnection": "Host=localhost;Port=5432;Database=TasksDb;Username=postgres;Password=1111"
   },
+  "JwtSettings": {
+    "validIssuer": "ThisIsAVeryVeryStrongSecretKey12345",
+    "validAudience": "https://localhost:5100",
+    "expires": 5,
+    "RefreshTokenLifeTime": 10
+  },
   "AllowedHosts": "*"
 }
