Feat: policies to notifications service

--- a/NotificationsService/NotificationsService.Presentation/appsettings.json
+++ b/NotificationsService/NotificationsService.Presentation/appsettings.json
@@ -20,5 +20,11 @@
     "SenderName": "TaskManager",
     "Password": "rgsqmcmrrjaaqrhf"
   },
+  "JwtSettings": {
+    "validIssuer": "ThisIsAVeryVeryStrongSecretKey12345",
+    "validAudience": "https://localhost:5271",
+    "expires": 5,
+    "RefreshTokenLifeTime": 10
+  },
   "AllowedHosts": "*"
 }
