--- a/NotificationsService/NotificationsService.Infrastructure/NotificationsService.Infrastructure.csproj
+++ b/NotificationsService/NotificationsService.Infrastructure/NotificationsService.Infrastructure.csproj
@@ -12,6 +12,7 @@
 
     <ItemGroup>
       <PackageReference Include="Hangfire.Mongo" Version="1.11.3" />
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.2" />
       <PackageReference Include="Microsoft.AspNetCore.Diagnostics" Version="2.3.0" />
       <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.2" />
