--- a/TasksService/TasksService.Application/TasksService.Application.csproj
+++ b/TasksService/TasksService.Application/TasksService.Application.csproj
@@ -12,6 +12,7 @@
       <PackageReference Include="FluentValidation" Version="11.11.0" />
       <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
       <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
+      <PackageReference Include="RabbitMQ.Client" Version="6.0.0" />
     </ItemGroup>
 
     <ItemGroup>
