--- a/NotificationsService/NotificationsService.Infrastructure/NotificationsService.Infrastructure.csproj
+++ b/NotificationsService/NotificationsService.Infrastructure/NotificationsService.Infrastructure.csproj
@@ -17,6 +17,7 @@
       <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.2" />
       <PackageReference Include="MongoDB.Driver" Version="3.2.0" />
+      <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
       <PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0" />
     </ItemGroup>
 
