--- a/TasksService/TasksService.Infrastructure/TasksService.Infrastructure.csproj
+++ b/TasksService/TasksService.Infrastructure/TasksService.Infrastructure.csproj
@@ -15,6 +15,7 @@
       <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.1" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.1" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.3" />
+      <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
       <PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0" />
     </ItemGroup>
 
