--- a/TasksService/TasksService.Infrastructure/TasksService.Infrastructure.csproj
+++ b/TasksService/TasksService.Infrastructure/TasksService.Infrastructure.csproj
@@ -7,12 +7,14 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\UsersService\UsersService.Grpc\UsersService.Grpc.csproj" />
       <ProjectReference Include="..\TasksService.Application\TasksService.Application.csproj" />
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Grpc.Net.ClientFactory" Version="2.67.0" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.2" />
-      <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.1" />
+      <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.2" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.1" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.3" />
       <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
