--- a/UsersService/UsersService.Presentation/UsersService.Presentation.csproj
+++ b/UsersService/UsersService.Presentation/UsersService.Presentation.csproj
@@ -12,6 +12,11 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Google.Protobuf" Version="3.29.3" />
+      <PackageReference Include="Grpc.Tools" Version="2.70.0">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.2">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
