Feat: redis for getting of all TasksController.cs Fix: remove links between TasksService and UsersService for gRPC working. Add Protos folder to TasksService instead of this

--- a/TasksService/TasksService.Presentation/appsettings.json
+++ b/TasksService/TasksService.Presentation/appsettings.json
@@ -8,6 +8,9 @@
   "ConnectionStrings": {
     "sqlConnection": "Host=localhost;Port=5432;Database=TasksDb;Username=postgres;Password=1111"
   },
+  "Redis": {
+    "ConnectionString": "localhost:6379"
+  },
   "JwtSettings": {
     "validIssuer": "ThisIsAVeryVeryStrongSecretKey12345",
     "validAudience": "https://localhost:5271",
