--- a/NotificationsService/NotificationsService.Infrastructure/NotificationsService.Infrastructure.csproj
+++ b/NotificationsService/NotificationsService.Infrastructure/NotificationsService.Infrastructure.csproj
@@ -18,6 +18,8 @@
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.2" />
       <PackageReference Include="MongoDB.Driver" Version="3.2.0" />
       <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
+      <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
+      <PackageReference Include="Serilog.Sinks.Elasticsearch" Version="10.0.0" />
       <PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0" />
     </ItemGroup>
 
