--- a/TasksService/TasksService.Presentation/appsettings.json
+++ b/TasksService/TasksService.Presentation/appsettings.json
@@ -9,7 +9,7 @@
     "sqlConnection": "Host=localhost;Port=5432;Database=TasksDb;Username=postgres;Password=1111"
   },
   "Redis": {
-    "ConnectionString": "localhost:6379"
+    "ConnectionString": "localhost:6379,abortConnect=false"
   },
   "JwtSettings": {
     "validIssuer": "ThisIsAVeryVeryStrongSecretKey12345",
