Feat: SignalR hub for users service (delete method)

--- a/UsersService/UsersService.Presentation/appsettings.json
+++ b/UsersService/UsersService.Presentation/appsettings.json
@@ -8,7 +8,7 @@
   "JwtSettings": {
     "validIssuer": "ThisIsAVeryVeryStrongSecretKey12345",
     "validAudience": "https://localhost:5271",
-    "expires": 5,
+    "AccessTokenLifetime": 5,
     "RefreshTokenLifeTime": 10
   },
   "ConnectionStrings": {
