Feat: docker-compose.yml

--- a/NotificationsService/NotificationsService.Presentation/appsettings.json
+++ b/NotificationsService/NotificationsService.Presentation/appsettings.json
@@ -6,8 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "MongoDb": "mongodb://localhost:27017",
-    "MongoHangfire": "mongodb://localhost:27017/HangfireDb"
+    "MongoDb": "mongodb://mongo:27017",
+    "MongoHangfire": "mongodb://mongo:27017/HangfireDb"
   },
   "MongoDbSettings": {
     "DatabaseName": "NotificationsDb",
