--- a/TasksService/TasksService.Presentation/appsettings.json
+++ b/TasksService/TasksService.Presentation/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "sqlConnection": "Host=localhost;Port=5432;Database=TasksDb;Username=postgres;Password=1111"
+    "sqlConnection": "Host=postgres-tasks;Port=5432;Database=TasksDb;Username=postgres;Password=1111"
   },
   "Redis": {
     "ConnectionString": "localhost:6379,abortConnect=false"
