--- a/ApiGateway/ApiGateway/ApiGateway.csproj
+++ b/ApiGateway/ApiGateway/ApiGateway.csproj
@@ -4,10 +4,10 @@
         <TargetFramework>net9.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
+        <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.2.0" />
       <PackageReference Include="Ocelot" Version="23.4.3" />
     </ItemGroup>
 
