--- a/UsersService/UsersService.Presentation/appsettings.json
+++ b/UsersService/UsersService.Presentation/appsettings.json
@@ -12,7 +12,7 @@
     "RefreshTokenLifeTime": 10
   },
   "ConnectionStrings": {
-    "sqlConnection": "Host=localhost;Port=5432;Database=UsersDb;Username=postgres;Password=1111"
+    "sqlConnection": "Host=postgres-users;Port=5432;Database=UsersDb;Username=postgres;Password=1111"
   },
 "AllowedHosts": "*"
 }
