Feat: gRPC container

--- a/UsersService/UsersService.Grpc/appsettings.json
+++ b/UsersService/UsersService.Grpc/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "sqlConnection": "Host=localhost;Port=5432;Database=UsersDb;Username=postgres;Password=1111"
+    "sqlConnection": "Host=postgres-users;Port=5432;Database=UsersDb;Username=postgres;Password=1111"
   },
   "AllowedHosts": "*",
   "Kestrel": {
