--- a/Tests/IntegrationTests/IntegrationTests.csproj
+++ b/Tests/IntegrationTests/IntegrationTests.csproj
@@ -25,8 +25,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\TasksService\TasksService.Infrastructure\TasksService.Infrastructure.csproj" />
-      <ProjectReference Include="..\TasksService\TasksService.Presentation\TasksService.Presentation.csproj" />
+      <ProjectReference Include="..\..\TasksService\TasksService.Infrastructure\TasksService.Infrastructure.csproj" />
+      <ProjectReference Include="..\..\TasksService\TasksService.Presentation\TasksService.Presentation.csproj" />
     </ItemGroup>
 
 </Project>
